@@ -1,3 +1,7 @@
+2009-01-20  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Added feature #10206: htmlArea RTE: Allow to hide any button
+
 2009-01-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #10181: htmlArea RTE: Move status bar to plugin
